# example-py-package

./: .gitignore  README.md  pyproject.toml
conda.recipe/: meta.yaml
conda_build/recipe/: meta.yaml
scripts/: build_conda_package.sh
src/example_py_package/: __init__.py  snake.py
tests/: test_module_demo.py  test_snake.py
